--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,18 +17,18 @@
     <nav>
 
         <div class="logo">
-            <img src="/assests/logoBg.png" alt="logo" class="logo">
+            <img src="https://media.istockphoto.com/id/1835372684/photo/speech-bubble-with-play-icon.jpg?s=1024x1024&w=is&k=20&c=PXrq4GZrl047IklVOcwnzgXZyORN8H9sC84WX6YQ0Y8=" alt="logo" class="logo">
         </div>
 
         <div class="title">
-            <h1>Movies Store</h1>
+            <h1>Movies Library</h1>
         </div>
 
         <div class="extra">
 
             <div class="buttons">
                 
-                <a class="styled-button" href="/yourlibrary">Your Library</a>
+                <a class="styled-button" href="/yourlibrary">Fauvrite List</a>
                 <a class="styled-button" href="/logout">Logout</a>
             </div>
 
@@ -36,34 +36,12 @@
 
     </nav>
 
-
-
-
-
-
-
-
-    <!-- <nav class="navbar">
-        <div class="logo">
-            <img src="/assests/logoBg.png" alt="Logo">
-        </div>
-        <div class="title">
-            Movies Store
-        </div>
-        <div class="button-container">
-            <div class="library-button">
-                <a style="text-decoration: none;" href="/yourlibrary"><button>Your Library</button></a>
-            </div>
-            <div class="menu">
-                <a style="text-decoration: none;" href="/logout"><button>Logout</button></a>
-            </div>
-        </div>
-    </nav> -->
     <div class="main">
         <input type="text" placeholder="Search Movies Name" class="inp">
         <input type="hidden" id="userId" value="<%= user.id %>">
         <div class="results"></div>
     </div>
+    
     <script src="/js/home.js"></script>
 </body>
 </html>
