--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -6,8 +6,8 @@ body{
 }
 nav{
     width: 100vw;
-    height: 13vh;
-    background-color:  #010951;
+    height: 9vh;
+    background-color:  #098bee;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -17,7 +17,7 @@ nav{
     color: white;
     text-decoration: wavy;
     margin-left: 20px;
-    font-family: "Major Mono Display", monospace;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .extra{
@@ -29,7 +29,7 @@ nav{
 }
 
 .styled-button {
-    background-color: #007bff;
+    background-color: #a2e012;
     border: none;
     border-radius: 5px;
     margin-right: 10px;
@@ -39,22 +39,22 @@ nav{
     padding: 10px 20px;
     text-align: center;
     transition: background-color 0.3s ease, color 0.3s ease;
-    font-weight: 500;
+    font-weight: 400;
     outline: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .styled-button:hover {
-    background-color: #0056b3;
+    background-color: #098bee;
 }
 
 .styled-button:active {
-    background-color: #003a75;
+    background-color: #ee5209;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .logo{
-    height: 13vh;
+    height: 9vh;
     width: 10vw;
     
 }
@@ -66,10 +66,10 @@ nav{
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    
+    background-color: rgb(154, 233, 241);
 }
 
-.img2, .img1{
+.img1{
     background-color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
@@ -77,23 +77,24 @@ nav{
 
 .text{
     text-align: center;
-    margin-top: 20px;
-    color: #2F3C7E;
-    background-color: white;
+    margin-top: 15px;
+    margin-bottom: 50px;
+    color: #eea209;
+    
 }
 
 footer{
    
     width: 100vw;
     height: 10vh;
-    background-color: #010951;
+    background-color: #098bee;
     text-align: center;
     padding: 20px;
     color: white;
 
 }
 
-.styled-butto{
+.styled-button{
     color: white;
 }
 
