--- a/public/styles/lib.css
+++ b/public/styles/lib.css
@@ -6,7 +6,7 @@ body {
 }
 
 nav {
-    background-color: #010951;
+    background-color: #098bee;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -15,12 +15,14 @@ nav {
 }
 
 .logo img {
-    height: 40px;
+    height: 9vh;
     width: auto;
 }
 
 .title {
-    font-size: 20px;
+    font-size: 40px;
+    margin-right: 50%;
+    
 }
 
 .toggle {
