--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -20,11 +20,11 @@
     <nav>
 
         <div class="logo">
-            <img src="/assests/logoBg.png" alt="logo" class="logo">
+            <img src="https://media.istockphoto.com/id/1835372684/photo/speech-bubble-with-play-icon.jpg?s=1024x1024&w=is&k=20&c=PXrq4GZrl047IklVOcwnzgXZyORN8H9sC84WX6YQ0Y8=" alt="logo" class="logo">
         </div>
 
         <div class="title">
-            <h1>Movies Store</h1>
+            <h1>Movies Library</h1>
         </div>
 
         <div class="extra">
@@ -42,22 +42,16 @@
     <div class="main">
 
         <div class="img1">
-            <img src="/assests/img1.png" alt="img1">
+            <img src="https://plus.unsplash.com/premium_photo-1710500925453-0c022d1e0983?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzd8fGxvZ28lMjBtb3ZpZSUyMHZpZGVvfGVufDB8fDB8fHww" alt="img1">
         </div>
-
-
-        <div class="img2">
-            <img src="/assests/img2.png" alt="img2">
+        <div class="text">
+            <h1>Welcome to the world of Cinema</h1>
         </div>
-
     </div>
 
-    <div class="text">
-        <h1>Your One and Only Movie Library</h1>
-    </div>
 
     <footer>
-        <p>@2024 MoviesStore by Sharad Pal. All rights reserved</p>
+        <p>@2024 Movies Library . All rights reserved</p>
     </footer>
 
 </body>
