--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,20 +15,7 @@
 <body>
 
      
-    <nav>
-
-        <div class="logo">
-            <img src="/assests/logoBg.png" alt="logo" class="logo">
-        </div>
-
-        <div class="title">
-            <h1>Movies Store</h1>
-        </div>
-
-
-       
-    </nav>
-
+ 
     <div class="outer">
 
     <div class="main">
@@ -36,7 +23,7 @@
         
         <form action="/signup" method="post">
             <div class="name">
-                <h3>Signup</h3>
+                <h3>Sign Up</h3>
             </div>
             <div class="inp">
                 <label for="email">Email</label>
